# CoTutor

./: .env.example  .gitignore  README.md  pyproject.toml  test_output.txt
config/: __init__.py  models.yaml  settings.py
examples/: model_layer_demo.py  model_usage_example.py  solver_example.py
scripts/: debug_solver.py  run_e2e.py  test_ollama_api.py
src/: __init__.py
src/a2a/: __init__.py  client.py
src/agents/solver/: __init__.py  agent.py  parser.py  prompts.py  tools.py
src/agents/tutor/: __init__.py  agent.py  prompts.py  session_manager.py  strategies.py
src/core/: __init__.py  exceptions.py  types.py
src/guardrails/: __init__.py  base.py  orchestrator.py  patterns.py
src/guardrails/detectors/: __init__.py  manipulation.py  pedagogical.py  solution_leak.py
src/guardrails/filters/: __init__.py  input_filter.py  response_filter.py
src/models/: __init__.py  base.py  factory.py  huggingface_local.py  ollama_adapter.py  openai_local.py
src/services/: __init__.py  app.py
src/services/routers/: __init__.py  solver.py  tutor.py
src/utils/: __init__.py  logging.py  metrics.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_lifecycle.py
tests/test_agents/: __init__.py  test_solver_agent.py  test_solver_parser.py  test_solver_tools.py
tests/test_agents/test_tutor/: __init__.py  test_agent.py  test_prompts.py  test_session_manager.py  test_strategies.py
tests/test_guardrails/: test_filters.py  test_manipulation.py  test_orchestrator.py  test_pedagogical.py  test_solution_leak.py
tests/test_models/: __init__.py  test_base.py  test_factory.py  test_ollama.py  test_openai_local.py
tests/test_services/: test_api.py
ui/: package.json
ui/src/: App.tsx
ui/src/components/: SolutionView.tsx  SolverInput.tsx  TutorChat.tsx
ui/src/services/: api.ts
